--- a/styles/style.css
+++ b/styles/style.css
@@ -6,17 +6,20 @@ body{
 
 main{
     display: flex;
-    justify-content: center;
+    flex-direction: column;
+    align-items: center;
 }
 .container{
     background-color: #ffffff;
     width: 870px;
     padding: 30px;
+    margin-top: 20px;
+    border-radius: 5px;
 }
 
 .hr{
     border: 1px solid #D1D1D1;
-    margin-bottom: 30px;
+    margin-bottom: 27px;
 }
 /* top players style  */
 .top-players{
@@ -72,4 +75,37 @@ main{
 .blog-author a{
     color: #562EFF;
     text-decoration: none;
+}
+
+/* courses styles */
+
+.course .course-banner img{
+    width: 224px;
+    height: 104px;
+}
+.course-info{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+.fa-star{
+    font-size: 12px;
+}
+.fa-star.filled{
+    color:#FFC014;
+}
+.fa-star.empty{
+    color:#AEAEAE;
+}
+.course-duration{
+    background: #FFE4E8;
+    border-radius: 15px;
+    padding: 0 5px;
+}
+.course-title{
+    color: #1E1E1E;
+    font-size: 20.0336px;
+}
+.course-author{
+    color: #ED6B4F;
 }
