--- a/styles/style.css
+++ b/styles/style.css
@@ -79,6 +79,20 @@ main{
 
 /* courses styles */
 
+.courses{
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-column-gap: 24px;
+}
+
+.course{
+    width: 253px;
+    height: 270px;
+    padding: 5px;
+    border: 3px solid whitesmoke;
+    border-radius: 15px;
+}
+
 .course .course-banner img{
     width: 224px;
     height: 104px;
